2008-07-17  Suman Manjunath  <msuman@novell.com>

	* exchange-account-listener.c (add_cal_esource):
	* exchange-mapi-account-setup.c (exchange_mapi_cal_commit):
	Add the ACL properties to the source group as well as they are needed
	by newly created folders. 

2008-07-06  Suman Manjunath  <msuman@novell.com>

	* exchange-account-listener.c: (add_cal_esource): Only enable default
	calendar/task list/memo list after account setup. 

2008-06-10  Suman Manjunath  <msuman@novell.com>

	* exchange-account-listener.c: (add_cal_esource): Added a few ACL props
	to the e-source entries. 

2008-04-28  Suman Manjunath  <msuman@novell.com>

	* exchange-account-listener.c: (add_cal_esource),
	(add_addressbook_sources):
	* exchange-mapi-account-setup.c: (exchange_mapi_book_commit),
	(exchange_mapi_cal_commit):
	Use a common password component across e-d-s, Camel and Evolution.

2008-04-14  Johnny Jacob  <jjohnny@novell.com>

	* exchange-mapi-account-setup.c (org_gnome_exchange_mapi_account_setup): Added 
	extra log messages in account setup.

2008-04-01  Johnny Jacob  <jjohnny@novell.com>

	* Makefile.am: Removed reference to libexchange-storage.

2008-02-15  Johnny Jacob  <jjohnny@novell.com>
	
	* Makefile.am (INCLUDES): LIBAMPI_LDIF_DIR. Added.

	* exchange-mapi-account-setup.c (exchange_mapi_create_profile): Remove
	hardcoded path for createprofile's ldif directory.

2008-02-01  Suman Manjunath  <msuman@novell.com>

	* exchange-mapi-account-setup.c: (exchange_mapi_cursor_change),
	(exchange_mapi_book_commit), (exchange_mapi_cal_commit): Use utility 
	functions for ID conversions, fixed setting of relative uri for newly
	created calendars/task-lists/memo-lists.

2008-01-16  Suman Manjunath  <msuman@novell.com>

	* exchange-account-listener.c: (add_cal_esource),
	(remove_cal_esource), (modify_cal_esource), (add_calendar_sources),
	(remove_calendar_sources), (modify_calendar_sources),
	(add_addressbook_sources), (remove_addressbook_sources),